--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python-dotenv>=1.0
-livekit-protocol>=1.0.2
-livekit>=1.0.6
-livekit-agents>=1.0.16
-livekit-api>=1.0.2
-livekit-agents[openai, elevenlabs, deepgram, silero]>=1.0.16
+python-dotenv==1.1.0
+livekit-protocol===1.0.2
+livekit==1.0.8
+livekit-agents==1.0.23
+livekit-api==1.0.2
+livekit-agents[openai, elevenlabs, deepgram, silero]==1.0.23
